2007-05-27  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-updatebuildenv: 
	* pbuilder-createbuildenv: exit 0 at end.

	* pbuilder-buildpackage (BUILD_PID): explicitly call trap to
	untrap unexpected exit cases. Unexpected cases should exit 1, 
	expected exit cases should exit 0.

	* pbuilder-user-mode-linux: change all 'trap' functions to be postfixed with _trap

	* pbuilder-createbuildenv: 
	* pbuilder-updatebuildenv: trap sighup as well as exit.

	* pdebuild.1: document the new behavior.

	* pdebuild: create ../pkg_ver_arch.build file per default,
	matching debuild.

	* pdebuild-checkparams (BASEBUILDPLACE): use
	"${PBUILDER_BUILD_LOGFILE}" variable

	* testsuite/run-test.sh: process logs to reduce diff.

	* pbuilder-buildpackage: 
	* pbuilder-buildpackage-funcs: 
	* pbuilder-createbuildenv: 
	* pbuilder-updatebuildenv: 
	* pbuilder-user-mode-linux: trap sighup as well as exit.

2007-05-17  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Make some references to 'base
	chroot image tar-ball' to explicitly refer to 'base.tgz'

	* pdebuild.1: 
	* pbuilder.8: 
	* pbuilder-user-mode-linux.1: update documentation.

	* pdebuild-uml-checkparams: use tee for --logfile

	* pdebuild-checkparams: 
	* pbuilder-checkparams: 
	* pbuilder-buildpackage: use tee so that user can see what's being logged.

2007-05-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.ja.po: 
	* Documentation/Makefile: start implementing Japanese version of manual

2007-05-10  Junichi Uekawa  <dancer@debian.org>

	* Documentation/debconf7/pbuilder.tex: add references to other works.

	* Documentation/pbuilder-doc.xml: add more explanation about B92test-pkg

2007-05-05  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update and clarify documentation.


2007-04-29  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends-aptitude: Pass --without-recommends to
	aptitude.

2007-04-22  Junichi Uekawa  <dancer@debian.org>
