@@ -14,13 +14,15 @@ pbuilder (0.167) UNRELEASED; urgency=low
     (Closes: #424717).
   - pdebuild will create .build file in similar manner to debuild command
   - output is tee'd to terminal and also the logfile.
+  * add C11screen example script, which starts up GNU screen after build
+    failure.
   
   [ Loic Minier ]
   * Tune aptitude opts in pbuilder-satisfydepends-aptitude to handle complex
     dependencies in experimental, to support unsigned APT repositories, and to
     not install Recommends.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 27 May 2007 13:50:46 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 27 May 2007 14:48:37 +0900
 
 pbuilder (0.166) unstable; urgency=low
 
