@@ -1,5 +1,13 @@
 2007-05-27  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml: add documentation about
+	C11screen.
+
+	* Makefile: install the new example.
+
+	* examples/C11screen: add new hook, which might be more useful,
+	call GNU screen instead of bash.
+
 	* pbuilder-updatebuildenv: 
 	* pbuilder-createbuildenv: exit 0 at end.
 
